// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Correctly - Create 1`] = `
<div>
  <vue-headful-stub
    description=""
    head="[object Object]"
    title="Munro - Create Competitor"
  />
   
  <div
    class="w-10/12 mx-auto md:w-3/4 xl:w-2/3 md:mt-2"
  >
    <h1
      class="my-2 text-3xl font-bold md:text-35xl font-heading text-main-700"
    >
      
    Create Competitor
  
    </h1>
     
    <div
      class="grid grid-cols-2 gap-8 pb-8 md:gap-6 lg:gap-8"
    >
      <form
        class="col-span-2"
      >
        <div>
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="Name:"
          >
            Name:
          </label>
           
          <input
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="Name:"
            type="text"
          />
        </div>
         
        <div
          class="mt-4"
        >
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="Club:"
          >
            Club:
          </label>
           
          <input
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="Club:"
            type="text"
          />
        </div>
         
        <div
          class="mt-4"
        >
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="Age Class:"
          >
            Age Class:
          </label>
           
          <input
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="Age Class:"
            type="text"
          />
        </div>
         
        <div
          class="relative mt-4"
        >
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="League:"
          >
            
    League:
  
          </label>
           
          <svg
            class="absolute bottom-0 right-0 h-6 mr-2 text-main-500"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            style="margin-bottom: 0.625rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 9l-7 7-7-7"
            />
          </svg>
           
          <select
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none appearance-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="League:"
          >
            <option />
             
          </select>
        </div>
         
        <div
          class="relative mt-4"
        >
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="Course:"
          >
            
    Course:
  
          </label>
           
          <svg
            class="absolute bottom-0 right-0 h-6 mr-2 text-main-500"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            style="margin-bottom: 0.625rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 9l-7 7-7-7"
            />
          </svg>
           
          <select
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none appearance-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="Course:"
          >
            <option />
             
          </select>
        </div>
         
        <button
          class="mt-8 button-lg"
        >
          Create Competitor
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renders Correctly - Upload 1`] = `
<div>
  <vue-headful-stub
    description=""
    head="[object Object]"
    title="Munro - Edit Competitor"
  />
   
  <div
    class="w-10/12 mx-auto md:w-3/4 xl:w-2/3 md:mt-2"
  >
    <h1
      class="my-2 text-3xl font-bold md:text-35xl font-heading text-main-700"
    >
      
    Edit Competitor
  
    </h1>
     
    <div
      class="grid grid-cols-2 gap-8 pb-8 md:gap-6 lg:gap-8"
    >
      <form
        class="col-span-2"
      >
        <div>
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="Name:"
          >
            Name:
          </label>
           
          <input
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="Name:"
            type="text"
          />
        </div>
         
        <div
          class="mt-4"
        >
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="Club:"
          >
            Club:
          </label>
           
          <input
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="Club:"
            type="text"
          />
        </div>
         
        <div
          class="mt-4"
        >
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="Age Class:"
          >
            Age Class:
          </label>
           
          <input
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="Age Class:"
            type="text"
          />
        </div>
         
        <div
          class="relative mt-4"
        >
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="League:"
          >
            
    League:
  
          </label>
           
          <svg
            class="absolute bottom-0 right-0 h-6 mr-2 text-main-500"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            style="margin-bottom: 0.625rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 9l-7 7-7-7"
            />
          </svg>
           
          <select
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none appearance-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="League:"
          >
            <option />
             
          </select>
        </div>
         
        <div
          class="relative mt-4"
        >
          <label
            class="block pb-1 select-none font-heading text-main-600"
            for="Course:"
          >
            
    Course:
  
          </label>
           
          <svg
            class="absolute bottom-0 right-0 h-6 mr-2 text-main-500"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            style="margin-bottom: 0.625rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 9l-7 7-7-7"
            />
          </svg>
           
          <select
            class="w-full px-3 py-2 transition-all duration-300 border-2 border-opacity-0 outline-none appearance-none rounded-shape text-body bg-main-100 border-main focus:border-opacity-100"
            id="Course:"
          >
            <option />
             
          </select>
        </div>
         
        <button
          class="mt-8 button-lg"
        >
          Update Competitor
        </button>
      </form>
    </div>
  </div>
</div>
`;
